fixed spacing of blog post sections

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -56,7 +56,7 @@ p,button,input,textarea
 	p
 		max-width 600px
 
-#blog-content, .content
+#blog-content, #about-content, section>.container>.row
 	p, pre
 		font-weight normal
 		font-family $corbel
@@ -170,6 +170,9 @@ textarea
 // --- misc classes
 ul
 	font-size 0
+.masonry-filter-holder
+	ul
+		font-size 16px
 .language-dropdown
 	ul
 		font-size 14px
